# graph-splitting

./: CMakeLists.txt  GraphProject_ru_RU.ts  README.md  lines_of_code.py  main.cpp  pseudo_code.txt  test_graphs.txt
src/: IObservable.h  IObserver.h
src/SolverModel/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  Graph.cpp  Graph.h  GraphSplitter.h  SolverModel.cpp  SolverModel.h
src/SolverModel/SplitAlgorithms/: GetAllBinaryTrees.cpp  GetAllGrids.cpp  GetAllHyperCubes.cpp  GetAllLines.cpp
src/View/: GraphWidget.cpp  GraphWidget.h  ViewAbstractFactory.h  ViewEdge.cpp  ViewEdge.h  ViewVertex.cpp  ViewVertex.h  itemdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave.xml  mainwindow_test.qmlproject.qtds  mainwindow_test.qmlproject.xml  ui_mainwindow.h
